--- a/vignettes/articles/preview-sdtm.Rmd
+++ b/vignettes/articles/preview-sdtm.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Introduction to pharmaversesdtm"
+title: "Preview of SDTM Datasets"
 date: "2026-01-17"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introduction to pharmaversesdtm}
+  %\VignetteIndexEntry{Preview of SDTM Datasets}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
