--- a/vignettes/articles/preview-sdtm.Rmd
+++ b/vignettes/articles/preview-sdtm.Rmd
@@ -25,8 +25,11 @@ areas <- sort(unique(sapply(specs_yml, function(x) x$therapeutic_area)))
 propercase <- \(w) paste0(toupper(substr(w, 1, 1)), tolower(substring(w, 2)))
 
 collapsible_groups <- lapply(areas, function(area) {
-  # Indices of datasets in this area
+  # Indices of datasets in this area, ordered alphabetically by name
   area_indices <- which(sapply(specs_yml, function(x) x$therapeutic_area) == area)
+  order_indices <- order(sapply(specs_yml[area_indices], function(x) x$name))
+  area_indices <- area_indices[order_indices]
+
   # Create collapsibles for this area
   area_panels <- lapply(area_indices, function(ix) {
     dataset_name <- specs_yml[[ix]]$name
